Created time blocks in html and css

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 100px;
   border-top: 1px solid white;
 }
 
@@ -41,6 +41,7 @@ header {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  line-height: 100px;
 }
 
 .past {
